<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".WorkshopDescription">

    <ImageView
        android:id="@+id/workshop_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:src="@drawable/banner"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/apply_button"
        app:layout_constraintTop_toBottomOf="@+id/workshop_image">

        <TextView
            android:id="@+id/workshop_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_textview"

            android:textSize="18sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_textview"
            android:textSize="18sp"
            android:textStyle="bold" />
            <TextView
                android:id="@+id/workshop_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:text="12/6/2018|3:43PM" />
        </LinearLayout>


        <ScrollView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/workshop_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_textview" />
        </ScrollView>

    </LinearLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/apply_button"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>