<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Splash">

    <TextView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loader"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:max="100"
        android:progress="50"
        android:soundEffectsEnabled="true"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636">

        <android.support.design.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18dp" />

        <android.support.design.button.MaterialButton
            android:id="@+id/skip_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip_button"
            android:textAlignment="center"
            android:textSize="18dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>